# ts2vg

./: .buildinfo  .gitignore  LICENSE  README.md  README.rst  changelog.html  defs.html  docs_requirements.txt  examples.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs.yml  package-pypi.yml  package-test-pypi.yml  tests.yml
_static/: custom.css  documentation_options.js
api/: graph_options.html  horizontalvg.html  index.html  naturalvg.html  ts2vg.HorizontalVG.html  ts2vg.NaturalVG.html
docs/: index.html
docs/source/: changelog.rst  conf.py  defs.rst  examples.rst  index.rst
docs/source/_static/: custom.css
docs/source/_templates/: page.html
docs/source/_templates/autosummary/: class.rst
docs/source/api/: graph_options.rst  horizontalvg.rst  index.rst  naturalvg.rst
docs/source/examples/: adjacency_matrix.py  basic.py  degree_distribution.py  directed.py  horizontal.py  make_figures.py  partitioning.py  penetrable.py  plot_graph_demo.py  plot_utils.py  weighted.py
docs/source/misc/: plot_graph_demo.py
tests/: fixtures.py  naive_implementations.py  test_dual_perspective.py  test_horizontal.py  test_horizontal_penetrable.py  test_horizontal_vg.py  test_natural.py  test_natural_penetrable.py  test_natural_vg.py  test_parametric.py  test_penetrable.py
ts2vg/: __init__.py  cli.py  nvg.c  nvg.pyx  pairqueue.c  pairqueue.pyx
ts2vg/graph/: _base.pxd  _base.pyx  _circular_penetrable.pyx  _horizontal.pyx  _horizontal_penetrable.pyx  _natural.pyx  _natural_penetrable.pyx  base.py  circular.py  horizontal.py  natural.py  summary.py
ts2vg/utils/: pairqueue.pxd  pairqueue.pyx
