[build-system]
requires = ["setuptools>=40.8.0", "wheel", "numpy", "cython"]
build-backend = "setuptools.build_meta"


# Eventually lighten (or get rid of) setup.cfg whenever setuptools supports PEP 621.
# Follow https://github.com/pypa/setuptools/issues/1688

# [project]
# name = "ts2vg"
# description = "Build visibility graphs from time series data."
# readme = "README.rst"
# requires-python = ">=3.8"
# license.file = "LICENSE"
# keywords = ["graph", "network", "visibility", "time", "series"]
# classifiers = [
#     "License :: OSI Approved :: MIT License",
#     "Programming Language :: Python",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3.8",
#     "Programming Language :: Python :: 3.9",
#     "Programming Language :: Python :: 3.10",
#     "Programming Language :: Python :: 3.11",
#     "Programming Language :: Python :: 3.12",
#     "Programming Language :: Cython",
#     "Topic :: Software Development :: Libraries :: Python Modules",
#     "Operating System :: OS Independent",
#     "Topic :: Scientific/Engineering :: Mathematics",
#     "Development Status :: 4 - Beta",
#     "Intended Audience :: Science/Research",
# ]
# dependencies = [
#     "numpy",
# ]
# dynamic = ["version"]
# 
# [project.urls]
# "Documentation"   = "https://carlosbergillos.github.io/ts2vg"
# "Source Code"     = "https://github.com/CarlosBergillos/ts2vg"
# 
# [[project.authors]]
# name = "Carlos Bergillos"
# email = "c.bergillos.v@gmail.com"
# 
# [project.scripts]
# ts2vg = "ts2vg.cli:main"
# 
# [project.optional-dependencies]
# tests = [
#     "pytest",
# ]

