[metadata]
name                = ts2vg
version             = attr: ts2vg._version.__version__
author              = Carlos Bergillos
author_email        = c.bergillos.v@gmail.com
description         = Build visibility graphs from time series data.
long_description    = file: README.rst
long_description_content_type = text/x-rst
keywords            = graph,network,visibility,time,series
url                 = https://github.com/CarlosBergillos/ts2vg
project_urls        =
    Documentation   = https://carlosbergillos.github.io/ts2vg
    Source Code     = https://github.com/CarlosBergillos/ts2vg
license             = MIT
license_files       = LICENSE
classifiers         =
    License :: OSI Approved :: MIT License
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research

[options]
packages            = find:
zip_safe            = false
install_requires    = 
    numpy

[options.packages.find]
include             = ts2vg*

[options.extras_require]
tests               =
    pytest

[options.entry_points]
console_scripts     = ts2vg=ts2vg.cli:main
